--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
-    "nodemon": "^3.1.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "nodemon": "^3.1.1"
   }
 }
